--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "hardhat": "^2.19.2"
   },
   "dependencies": {
+    "@api3/airnode-protocol": "^0.13.0",
     "@openzeppelin/contracts": "^5.0.1"
   }
 }
